--- a/src/style.css
+++ b/src/style.css
@@ -2,20 +2,12 @@ body{
     font-family: arial, sans-serif;
 }
 
-.weather-app{
-    max-width: 600px;
-    margin: 30px auto;
-    padding: 20px;
-    border: 1px solid #dadde1;
-    border-radius: 5px;
-
-}
-
 h1{
     color:#878787; 
     font-size: 24px; 
     font-weight: 100; 
     line-height:28px;
+    margin-bottom: 0;
 }
 
 ul {
@@ -32,5 +24,37 @@ li {
     font-size: 16px;
     font-weight: 100;
     line-height: 19px;
+}
+
+.weather-app-wrapper{
+    max-width:600px;
+    margin: 30px auto;
+}
+.weather-app {
+    padding: 20px;
+    border: 1px solid #dadde1;
+    border-radius: 5px;
+
+}
+
+.weather-temperature img{
+    margin-right: 2px;
+    height: 64px;
+    width:64px;
+
+}
+
+.weather-temperature strong{
+    color: rgb(32, 33, 36);
+    font-size: 48px; 
+    font-weight: 400; 
+    line-height: 64px; 
+    
+}
+
+.units{
+    position:relative;
+    font-size: 16px;
+    top: -26px;
 }
 
