--- a/src/style.css
+++ b/src/style.css
@@ -20,8 +20,9 @@ li {
     list-style: none;
     margin: 0;
     padding: 0;
+    text-transform: capitalize;
     color: #878787;
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 100;
     line-height: 19px;
 }
